# data-processor

./: .gitignore  CMakeLists.txt  README.md
data/: config.json  output.txt  settings.json
src/: cash.cpp  cash.h  common.h  element.cpp  element.h  input_data.cpp  input_data.h  json.cpp  json.h  log_duration.h  main.cpp  operation.cpp  operation.h  output_data.cpp  output_data.h  processor.cpp  processor.h  reader.cpp  reader.h  settings.cpp  settings.h  solution.cpp  solution.h
